@@ -3,6 +3,11 @@ gcc-defaults (1.37) unstable; urgency=medium
   [Ludovic Brenta]
   * Provide a gnat package that depends on the default Ada compiler.
   * Update README.Debian for gnat, gfortran.  Simplify it.
+  * debian/rules: reorder architectures alphabetically for future
+    maintainability.  Clean up the way we exclude some languages
+    on some architectures.  Disable Ada on m68k and GNU/Hurd, in
+    addition to GNU/NetBSD, SH3 and SH4 targets.
+  * debian/control (gnat): depend on cpp.
 
  -- Ludovic Brenta <ludovic@ludovic-brenta.org>  Sun, 11 Jun 2006 01:08:10 +0200
 	
